--- a/index.html
+++ b/index.html
@@ -9,24 +9,9 @@
   </head>
   <body>
     <div id="wrapper">
-      <div id="mover"></div>
-
-        <div id="content">
-          <h1>Lorem ipsum</h1>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nisl
-          tortor, efficitur vel arcu ac, iaculis porttitor neque. Sed in sapien
-          varius, imperdiet tortor vel, pellentesque orci. Sed consectetur
-          tellus in interdum luctus. Donec lacinia nibh in nunc sagittis, vitae
-          ultrices leo euismod. Duis eros nisi, sagittis sit amet metus et,
-          cursus eleifend dui. Phasellus eu dictum ligula. Nulla facilisi. Lorem
-          ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum aliquam
-          blandit nibh ut vehicula. Donec porttitor sollicitudin pretium.
-          Phasellus laoreet vulputate iaculis. Sed sodales nulla vel velit
-          sagittis, at faucibus mauris maximus. Mauris molestie vulputate magna.
-          Maecenas sit amet consectetur purus. Aliquam enim arcu, commodo non
-          nunc ac, malesuada iaculis purus. Aliquam eu lectus porttitor,
-          sollicitudin arcu sed, aliquet tellus.
-    </div>
+      <div id="grid">
+        <div id="mover"></div>
+      </div>
     </div>
   </body>
 </html>
